--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "env": "^0.0.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
