--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vercel-express-api",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
