--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "env": "^0.0.2",
     "express": "^4.18.2"
